<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/hello_rxjava_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.068"
        style="@style/MediumText" />

    <Button
        android:id="@+id/exercise_one_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_one_label"
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/large_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.682"
        app:layout_constraintStart_toEndOf="@+id/toggle_button"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:layout_marginStart="@dimen/large_margin"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/exercise_two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/exercise_two_label"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/exercise_one_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/exercise_one_button"
        app:layout_constraintTop_toBottomOf="@+id/exercise_one_button" />

    <Button
        android:id="@+id/exercise_three_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:text="@string/exercise_three_label"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/exercise_two_button"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/exercise_two_button"
        app:layout_constraintTop_toBottomOf="@+id/exercise_two_button" />

    <Button
        android:id="@+id/subscription_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription_label"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/large_margin"
        app:layout_constraintHorizontal_bias="0.265"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/new_activity_button" />

    <Button
        android:id="@+id/new_activity_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginEnd="@dimen/large_margin"
        android:text="@string/open_activity_label"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exercise_three_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
